using System;
using System.Collections.Generic;
using System.Text;

namespace ISP.Bad
{
    interface IPhone
    {
        public void SendMail();
        public void Call();
        public void UseApp();
    }
}
